src/assets/stylesheets/shared/main.scss
@import 'custom-variables';
@import 'custom-mixins';
body {
    font-family: Open Sans;
    font-size: 14px;
}

//colors
.color-grey {
    color: $color-pf-black-800 !important;
}

// custom classes
.containerPadd {
    padding: em(96) 0 em(66) 0;
}

.containerPadd-nologin {
    padding-bottom: 0;
}

.truncate {
    @include truncate;
}

.truncate-ellipsis {
    display: table;
    table-layout: fixed;
    white-space: nowrap;
}

.dn {
    display: none;
}

.dib {
    display: inline-block;
}

.db {
    display: block;
}

.textCenter {
    text-align: $textCenter;
}

.posRel {
  position: relative;
}

@media (max-width: $grid-float-breakpoint) {
    .mobdn {
        display: none;
    }
    .list-view-pf {
        .list-group-item-heading {
            // font-size: em(12);
        }
    }
}

@media (max-width: ($grid-float-breakpoint - 1)) {
    .containerPadd {
        padding-top: em(11);
    }
    .containerPadd-nologin {
        padding-bottom: 0;
    }
}

@import 'layout';
@import 'overrides-for-patternfly';

